--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <li>
             <a href="contact.html">Contact</a>
           </li>
+          <li>
+            <a href="project.html">Projects</a>
+          </li>
         </ul>
         <!-- Social Icons -->
         <ul class="social-icons">
