--- a/project.html
+++ b/project.html
@@ -41,12 +41,13 @@
    <button id="close-btn" class="close-btn">
     <i class="fas fa-times"></i>
    </button>
-   <ul class="sidebar-links">
+  <ul class="sidebar-links">
     <li><a href="index.html">home</a></li>
     <li><a href="about.html">about</a></li>
-    <li><a href="projects.html">projects</a></li>
+    <li><a href="service.html">service</a></li>
+    <li><a href="project.html">projects</a></li>
     <li><a href="contact.html">contact</a></li>
-   </ul>
+  </ul>
    <ul class="social-icons">
     <!-- single item -->
     <li>
