lorem place holder update

--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         Our Project teams are integrated, client-delivery focused blend of diaspora returnees with Blue Chip multi-national
         experience and local graduates with diverse backgrounds
        </p>
-       <h2>Vission</h2>
+       <h2>Vision</h2>
        <p>Our vision is a supermarket where the best in diverse professional consultancy services are available to clients under
        one organization.</p>
        <h2>Mission</h2>
