--- a/index.html
+++ b/index.html
@@ -199,11 +199,9 @@
                 <i class="fa-solid fa-list-check service-icon"></i>
                 <h4>project management</h4>
                 <div class="underline"></div>
-                <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy in
-                  every
-                  business. We will assist you in transforming your business by guiding you through each step, from strategic planning
-                  to
-                  implementation.</p>
+                <p>We specialize in project management, ensuring seamless delivery from start to finish. Our team focuses on optimizing
+                resources, timelines, and budgets to achieve your project goals efficiently and successfully. Let us help you navigate
+                every stage of your project with precision and expertise.</p>
               </article>
               <!-- End of Single service -->
               <!-- Single service -->
@@ -211,11 +209,9 @@
                 <i class="fa-solid fa-recycle service-icon"></i>
                 <h4>Change Management</h4>
                 <div class="underline"></div>
-                <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy in
-                  every
-                  business. We will assist you in transforming your business by guiding you through each step, from strategic planning
-                  to
-                  implementation.</p>
+                <p>We specialize in change management, helping your organization navigate transitions with ease. From strategy to
+                execution, we ensure a smooth process with minimal disruption and maximum engagement. Let us guide you through
+                successful, lasting transformations.</p>
                </article>
               <!-- End of Single service -->
               <!-- Single service -->
@@ -223,11 +219,9 @@
                 <i class="fa-solid fa-users-gear service-icon"></i>
                 <h4>Relationship Management</h4>
                 <div class="underline"></div>
-                <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy in
-                  every
-                  business. We will assist you in transforming your business by guiding you through each step, from strategic planning
-                  to
-                  implementation.</p>
+                <p>We excel in relationship management, helping you build and maintain strong, lasting connections with clients, partners,
+                and stakeholders. Our approach fosters trust and collaboration, ensuring long-term success and growth for your business.
+                Let us help you strengthen your key relationships.</p>
               </article>
               <!-- End of Single service -->
 
@@ -236,11 +230,9 @@
     <i class="fa-solid fa-group-arrows-rotate service-icon"></i>
     <h4>Business Process Re-engineering</h4>
     <div class="underline"></div>
-    <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy in
-      every
-      business. We will assist you in transforming your business by guiding you through each step, from strategic planning
-      to
-      implementation.</p>
+    <p>We excel in relationship management, helping you build and maintain strong, lasting connections with clients, partners,
+    and stakeholders. Our approach fosters trust and collaboration, ensuring long-term success and growth for your business.
+    Let us help you strengthen your key relationships.</p>
   </article>
   <!-- End of Single service -->
             </div>
