--- a/project.html
+++ b/project.html
@@ -105,17 +105,18 @@
     <!-- single project -->
     <article class="single-project">
       <div class="project-container">
-        <img src="./image/Firstbank-logo.jpg" alt="single project" />
+        <img src="./image/ARAP.jpg" alt="single project" />
         <a href="./index.html" class="project-icon">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="project-details">
-        <h4>First Bank</h4>
+        <h4>ARAP</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-          eveniet amet odit aperiam, provident cum possimus sapiente minus
-          quos! Ipsum?
+<h4>Project Management Services</h4>
+We provided Project Management services for the Aviation Revenue Automation Program (ARAP), aimed at automating systems to improve revenue assurance, transparency, and efficiency in billing, settlement, and monitoring.
+<h4>DETAILS</h4>
+Our work included conducting an equipment and value-for-money audit, managing a project dashboard to track and escalate issues, and proactively identifying and mitigating risks during implementation to ensure project success.
         </p>
         <div class="project-footer">
           <span>
@@ -129,15 +130,18 @@
     <!-- single project -->
     <article class="single-project">
       <div class="project-container">
-        <img src="./image/FAAN_LOGO.png" alt="single project" />
+        <img src="./image/GIS.jpg" alt="single project" />
         <a href="./index.html" class="project-icon">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="project-details">
-        <h4>First Bank</h4>
+        <h4>OGIS</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius quaerat quas adipisci optio assumenda non alias accusantium a quod minus cupiditate, dicta veritatis! Quaerat ducimus exercitationem unde explicabo in iure repellendus at aliquid, dolorum aspernatur, recusandae, incidunt consectetur quia ipsam!
+          <h4>Project Management Services</h4>
+          The project embarked on complete computerization of its registry documents in a digital archive, developing a Geographic
+          Information System (GIS) to capture, store, analyse, share, manage and display all types of geographical data and
+          automate the workflow processes within the Bureau.
         </p>
         <div class="project-footer">
           <span>
@@ -151,17 +155,19 @@
     <!-- single project -->
     <article class="single-project">
       <div class="project-container">
-        <img src="./image/ogun.jpeg" alt="single project" />
+        <img src="./image/CBN.png" alt="single project" />
         <a href="./index.html" class="project-icon">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="project-details">
-        <h4>Ogun GIS</h4>
+        <h4>CBN</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius quaerat quas adipisci optio assumenda non alias
-          accusantium a quod minus cupiditate, dicta veritatis! Quaerat ducimus exercitationem unde explicabo in iure
-          repellendus at aliquid, dolorum aspernatur, recusandae, incidunt consectetur quia ipsam!
+          <h4>Project Management Training </h4>
+          We provided senior staff with the essential tools they need to deliver successful projects. The curriculum covers the
+          complete project lifecycle, from initiating projects, through project planning, execution, monitoring and control to
+          project closure thereby enabling the participants understand project management principles and acquire project
+          management skills.
         </p>
         <div class="project-footer">
           <span>
