--- a/service.html
+++ b/service.html
@@ -107,13 +107,7 @@
       <i class="fa-solid fa-chess service-icon"></i>
       <h4>strategy management</h4>
       <div class="underline"></div>
-      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy
-        in
-        every
-        business. We will assist you in transforming your business by guiding you through each step, from strategic
-        planning
-        to
-        implementation.</p>
+      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy in every business. We will assist you in transforming your business by guiding you through each step, from strategic planning to implementation.</p>
     </article>
     <!-- End of Single service -->
     <!-- Single service -->
@@ -121,13 +115,9 @@
       <i class="fa-solid fa-list-check service-icon"></i>
       <h4>project management</h4>
       <div class="underline"></div>
-      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy
-        in
-        every
-        business. We will assist you in transforming your business by guiding you through each step, from strategic
-        planning
-        to
-        implementation.</p>
+      <p>We specialize in project management, ensuring seamless delivery from start to finish. Our team focuses on optimizing
+      resources, timelines, and budgets to achieve your project goals efficiently and successfully. Let us help you navigate
+      every stage of your project with precision and expertise.</p>
     </article>
     <!-- End of Single service -->
     <!-- Single service -->
@@ -135,13 +125,9 @@
       <i class="fa-solid fa-recycle service-icon"></i>
       <h4>Change Management</h4>
       <div class="underline"></div>
-      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy
-        in
-        every
-        business. We will assist you in transforming your business by guiding you through each step, from strategic
-        planning
-        to
-        implementation.</p>
+      <p>We expertise in change management, helping your organization navigate transitions with ease. From strategy to
+      execution, we ensure a smooth process with minimal disruption and maximum engagement. Let us guide you through
+      successful, lasting transformations.</p>
     </article>
     <!-- End of Single service -->
     <!-- Single service -->
@@ -149,13 +135,9 @@
       <i class="fa-solid fa-users-gear service-icon"></i>
       <h4>Relationship Management</h4>
       <div class="underline"></div>
-      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy
-        in
-        every
-        business. We will assist you in transforming your business by guiding you through each step, from strategic
-        planning
-        to
-        implementation.</p>
+      <p>We excel in relationship management, helping you build and maintain strong, lasting connections with clients, partners,
+      and stakeholders. Our approach fosters trust and collaboration, ensuring long-term success and growth for your business.
+      Let us help you strengthen your key relationships.</p>
     </article>
     <!-- End of Single service -->
 
@@ -164,13 +146,9 @@
       <i class="fa-solid fa-group-arrows-rotate service-icon"></i>
       <h4>Business Process Re-engineering</h4>
       <div class="underline"></div>
-      <p>We excel at both business strategy planning and execution. We recognize the significance of corporate strategy
-        in
-        every
-        business. We will assist you in transforming your business by guiding you through each step, from strategic
-        planning
-        to
-        implementation.</p>
+      <p>We specialize in Business Process Re-engineering, helping you optimize and streamline operations for greater efficiency.
+      By analyzing and redesigning key processes, we drive improvements that enhance performance and reduce costs. Let us help
+      you transform your business processes for long-term success.</p>
     </article>
     <!-- End of Single service -->
   </div>
